# qml

./: .gitignore  README.md  pyproject.toml
final_paper/: final_paper.aux  final_paper.bbl  final_paper.bcf  final_paper.fdb_latexmk  final_paper.fls  final_paper.out  final_paper.run.xml  final_paper.tex  sample.bib
project/: data_processing.py  feature_maps.ipynb  feature_maps.py  feature_selection.ipynb  kernel_alignment.ipynb  minimum_accuracy.py
qiskit/: README.md
qiskit/basics_of_quantum_information/: 1_single_systems.ipynb  2_multiple_systems.ipynb  3_quantum_circuits.ipynb  4_entanglement_in_action.ipynb  questions.ipynb
qiskit/fundamentals_of_quantum_algorithms/: 1_quantum_query_algorithms.ipynb  2_algorithmic_foundations.ipynb  3_phase_estimation_and_factoring.ipynb  questions.ipynb
qiskit/introduction/: 1_why_quantum_computing.ipynb  2_the_atoms_of_computation.ipynb  3_what_is_quantum.ipynb  4_describing_quantum_computers.ipynb  5_entangled_states.ipynb  6_visualizing_entanglement.ipynb  7_grovers_search_algorithm.ipynb  questions.ipynb
qiskit/quantum_machine_learning/: 1_introduction.ipynb  2_parameterized_quantum_circuits.ipynb  3_data_encoding.ipynb  4_training_parameterized_quantum_circuits.ipynb  5_supervised_learning.ipynb  6_variational_classification.ipynb  7_quantum_feature_maps_and_kernels.ipynb  8_unsupervised_learning.ipynb  9_quantum_generative_adversarial_networks.ipynb  questions.ipynb
qiskit/variational_algorithm_design/: 1_variational_algorithms.ipynb  2_reference_states.ipynb  3_ansatze_and_variational_forms.ipynb  4_cost_functions.ipynb  5_optimization_loops.ipynb  6_instances_and_extensions.ipynb  7_examples_and_applications.ipynb  questions.ipynb
