[tool.poetry]
name = "qml"
version = "0.1.0"
description = "quantum machine learning research"
authors = ["Amanda M Turney <amanda.marie.turney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
qiskit-textbook = {git = "https://github.com/qiskit-community/qiskit-textbook.git", subdirectory = "qiskit-textbook-src"}
ipykernel = "^6.25.1"
pylatexenc = "^2.10"
qiskit-aer = "^0.12.2"
tweedledum = "^1.1.1"
seaborn = "^0.12.2"
galois = "^0.3.5"
qiskit-machine-learning = {extras = ["sparse"], version = "^0.6.1"}
networkx = "^3.1"
qiskit-optimization = "^0.5.0"
xarray = "^2023.10.1"
qiskit-algorithms = "^0.2.1"
pillow = "10.2.0"
fonttools = "4.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
